# render-4d

./: Cargo.toml  README.md
examples/example/: Cargo.toml  index.html
examples/example/pkg/: README.md  example.js  example_bg.wasm  package.json
examples/example/resources/: ascii_art_texture.txt  texture
examples/example/src/: lib.rs  world.rs
src/: lib.rs  mesh.rs
src/mesh/: geometry.rs
