[package]
name = "render-4d"
version = "0.0.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
]
